# UDL-MetaTrainingHyperNetwork

./: .gitignore  README.md  cluster_fit_copy.py  config.yaml  main.py  main_meta.py  main_meta_contrastive.py  main_meta_contrastive_new.py  main_meta_new.py  main_new.py  meta_contrastive.py  meta_contrastive_copy.py  meta_contrastive_with_shared_vae.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
dataset_loading/: __init__.py  analyze_datasets.py  dataset.py  test_datasets.py
experiments/ablation_experiment/: config.yaml
experiments/baseline/: config.yaml
experiments/shared_loader_hyper_ablation/: config.yaml
experiments/shared_loader_hyper_baseline/: config.yaml
experiments/shared_vae_ablation/: config.yaml
experiments/shared_vae_baseline/: config.yaml
extras/: explore_seb.ipynb  train_vae.py
notebooks/: analysis.ipynb  explore.ipynb  explore_seb.ipynb
scripts/: analyze_datasets.py  dataset_fn.py  test_datasets.py
utils/: README.md  __init__.py  dataset.py  loss_utils.py  meta_training.py  metrics.py  networks.py  plotting.py  resource_manager.py  training_utils.py  vae_net.py  vae_utils.py
vae/: __init__.py  explore_seb.ipynb  train_vae.py  vae.py
